--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
 <title>Eclaboucles — Bijoux artisanaux</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="style.css">
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
+<script>
+window.dataLayer = window.dataLayer || [];
+function gtag(){dataLayer.push(arguments);}
+gtag('js', new Date());
+gtag('config', 'G-YXD6JPZJWC');
+</script>
+
 </head>
 
 <body>
