--- a/index.html
+++ b/index.html
@@ -21,15 +21,17 @@
 <body>
 
 <nav>
+  <div class="nav-links"></div>
     <a href="#about">La marque</a>
     <a href="blue-marble.html">Blue Marble</a>
     <a href="tournesols.html">Tournesols</a>
     <a href="contact.html">Contact</a>
+  </div>
 
-    <!-- Onglet panier à droite -->
-    <div id="nav-cart" style="float:right; margin-left: auto;">
-      <a href="#" id="open-cart">Panier (<span id="nav-cart-count">0</span>)</a>
-    </div>
+  <!-- Onglet panier à droite -->
+  <div id="nav-cart">
+    <a href="#" id="open-cart">Panier (<span id="nav-cart-count">0</span>)</a>
+  </div>
 
     <!-- Fenêtre panier flottante -->
   <div id="cart-modal" style="display:none; position:fixed; top:60px; right:20px; width:350px; max-height:80vh; overflow-y:auto; background:#fff; border:1px solid #ccc; padding:15px; box-shadow:0 2px 10px rgba(0,0,0,0.3); z-index:1000;">
