adding marque.html

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
 
 <nav>
   <div class="nav-links"></div>
-    <a href="#about">La marque</a>
+    <a href="index.html">Accueil</a>
+    <a href="marque.html">La marque</a>
     <a href="blue-marble.html">Blue Marble</a>
     <a href="tournesols.html">Tournesols</a>
     <a href="contact.html">Contact</a>
@@ -79,8 +80,11 @@
 </header>
 
 <section id="about">
-<h2>La marque</h2>
-<p>Des créations uniques façonnées à la main.</p>
+  <h2>La marque</h2>
+  <p>Découvrez l’univers Eclaboucles, la fabrication artisanale et les coulisses de création.</p>
+  <a href="marque.html">
+    <button>Découvrir</button>
+  </a>
 </section>
 
 <section id="collections">
