--- a/contact.html
+++ b/contact.html
@@ -21,8 +21,9 @@
 
 <nav>
   <a href="index.html">Accueil</a>
-  <a href="blue-marble.html">Blue Marble</a>
-  <a href="tournesols.html">Tournesols</a>
+  <a href="marque.html">La Marque</a>
+  <a href="collections.html">Collections</a>
+  <a href="gallery.html">Gallery</a>
   <a href="contact.html">Contact</a>
 
   <!-- Onglet panier à droite -->
