--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
   <div class="nav-links"></div>
     <a href="index.html">Accueil</a>
     <a href="marque.html">La marque</a>
-    <a href="blue-marble.html">Blue Marble</a>
-    <a href="tournesols.html">Tournesols</a>
+    <a href="collections.html">Collections</a>
+    <a href="gallery.html">Gallery</a>
     <a href="contact.html">Contact</a>
   </div>
 
@@ -89,10 +89,9 @@
 
 <section id="collections">
 <h2>Collections</h2>
-<div class="collection-buttons">
-<a href="blue-marble.html"><button>Blue Marble</button></a>
-<a href="tournesols.html"><button>Tournesols</button></a>
-</div>
+<a href="collections.html">
+  <button>Voir les collections</button>
+</a>
 </section>
 
 <section id="contact">
