--- a/marque.html
+++ b/marque.html
@@ -5,15 +5,26 @@
 <title>La Marque — Eclaboucles</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="style.css">
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-YXD6JPZJWC"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  
+  gtag('config', 'G-YXD6JPZJWC');
+</script>
+
 </head>
 <body>
 
 <nav>
   <div class="nav-links">
     <a href="index.html">Accueil</a>
-    <a href="blue-marble.html">Blue Marble</a>
-    <a href="tournesols.html">Tournesols</a>
     <a href="marque.html">La Marque</a>
+    <a href="collections.html">Collections</a>
+    <a href="gallery.html">Gallery</a>
     <a href="contact.html">Contact</a>
   </div>
   <div id="nav-cart">
